# 32bpp-ez-build

./: 32bpp_ez.pnml  AUTHORS  COPYING  ChangeLog  Makefile.in  NEWS  README  build_nml.in  configure.ac
arctic/: Makefile.in
arctic/lang/: english.lng
base/: Makefile.in
base/lang/: english.lng
doc/: IMPLEMENTATION
extra/: Makefile.in  build_nml.extra.in
extra/lang/: english.lng
lang/: english.lng
tropical/: Makefile.in
tropical/lang/: english.lng
